--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -34,28 +34,28 @@
       </li>
       {% if experiments_list %}
         <li class="treeview{% if object in experiments_list %} active{% endif %}">
-          <a href=""><i class="fa fa-eyedropper"></i> {% trans 'Experiments' %}</a>
+          <a href=""><i class="fa fa-eyedropper"></i> <span>{% trans 'Experiments' %}</span></a>
           <ul class="treeview-menu">
             {% for experiment in experiments_list %}
               <li class="{% if object == experiment %}active{% endif %}">
                 <a href="{{ experiment.get_absolute_url }}">
-                  <i class="fa fa-eyedropper"></i>{% trans experiment.title %}</a>
+                  <i class="fa fa-eyedropper"></i><span>{% trans experiment.title %}</span></a>
               </li>
             {% endfor %}
           </ul>
         </li>
       {% endif %}
       <li class="treeview{% if active_tab in 'experiments,units' %} active{% endif %}">
-        <a href=""><i class="fa fa-edit"></i>{% trans 'Create' %}</a>
+        <a href=""><i class="fa fa-edit"></i><span>{% trans 'Create' %}</span></a>
         <ul class="treeview-menu">
           <li class="{% if active_tab == 'experiments' %}active{% endif %}">
             <a href="{% url 'experiments:create' lab_pk=lab.pk %}">
-              <i class="fa fa-eyedropper"></i> {% trans 'Experiment' %}</a>
+              <i class="fa fa-eyedropper"></i> <span>{% trans 'Experiment' %}</span></a>
           </li>
           {% if experiments_list %}
             <li class="{% if active_tab == 'units' %}active{% endif %}">
               <a href="{% url 'units:list' lab_pk=lab.pk %}">
-                <i class="fa fa-cube"></i> {% trans 'Unit' %}
+                <i class="fa fa-cube"></i> <span>{% trans 'Unit' %}</span>
               </a>
             </li>
           {% endif %}
@@ -91,7 +91,7 @@
       <!--</li>-->
       <li class="{% if not active_tab and not object %} active{% endif %}">
         <a href="{% url 'filemanager' lab_pk=lab.pk %}">
-          <i class="fa fa-folder{% if not active_tab and not object %}-open{% endif %}"></i>{% trans 'Filemanager' %}
+          <i class="fa fa-folder{% if not active_tab and not object %}-open{% endif %}"></i><span>{% trans 'Filemanager' %}</span>
         </a>
       </li>
     {% endif %}
