--- a/templates/comments/comment_form.html
+++ b/templates/comments/comment_form.html
@@ -30,9 +30,9 @@
             <div class="box-header">
               <h3 class="box-title"><i class="fa fa-comment-o"></i> {% trans 'Add comment' %}</h3>
 
-              <div class="box-tools pull-right">
-                <button class="btn btn-info btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>
-              </div>
+              <!--<div class="box-tools pull-right">-->
+                <!--<button class="btn btn-info btn-sm" data-widget="collapse"><i class="fa fa-minus"></i></button>-->
+              <!--</div>-->
             </div>
             <form action="{% url 'comment:comment' lab_pk=lab.pk %}" method="post" id="comment-form" class="comment-form">
               <div class="box-body">
