Update graph(add fa icons)

--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -3,7 +3,7 @@
 {% load i18n static %}
 
 {% block breadcrumb %}
-  <li class="active">{{ object }}</li>
+<li class="active" xmlns="http://www.w3.org/1999/html">{{ object }}</li>
 {% endblock %}
 
 {% block content_header %}{{ object }}{% endblock %}
@@ -275,12 +275,67 @@
   <link rel="stylesheet" media="screen" href="{% static 'jquery-handsontable/jquery.handsontable.full.css' %}">
   <link rel="stylesheet" media="screen" href="{% static 'jquery-handsontable/jquery.handsontable.bootstrap.css' %}">
   <link rel="stylesheet" media="screen" href="{% static 'jstree/themes/default/style.min.css' %}">
+  <style>
+    svg {
+      background-color: #FFF;
+      cursor: default;
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      -o-user-select: none;
+      user-select: none;
+    }
+    svg:not(.active):not(.ctrl) {
+      cursor: crosshair;
+    }
+    path.link {
+      fill: none;
+      stroke: #000;
+      stroke-width: 4px;
+      cursor: default;
+    }
+    svg:not(.active):not(.ctrl) path.link {
+      cursor: pointer;
+    }
+    path.link.selected {
+      stroke-dasharray: 10, 2;
+    }
+    path.link.dragline {
+      pointer-events: none;
+    }
+    path.link.hidden {
+      stroke-width: 0;
+    }
+    circle.node {
+      stroke-width: 1.5px;
+      cursor: pointer;
+    }
+    circle.node.reflexive {
+      stroke: #000 !important;
+      stroke-width: 2.5px;
+    }
+    text {
+      font: 12px sans-serif;
+      pointer-events: none;
+    }
+    text.id {
+      text-anchor: middle;
+      font-weight: bold;
+    }
+    .svg-icon {
+      font-size: 16px;
+      color: white;
+      text-anchor: middle;
+      dominant-baseline: central;
+    }
+  </style>
   {% block extra_css %}{% endblock %}
 
 {% endblock %}
 
 {% block script %}
   <script src="{% static 'ckeditor/ckeditor.js' %}"></script>
+  <script src="{% static 'js/font-awesome-unicode-map.js' %}"></script>
   <script src="{% static 'js/recent.js' %}"></script>
   <script src="{% static 'js/d3.v3.min.js' %}"></script>
   <script src="{% static 'js/graph.js' %}"></script>
