--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -532,10 +532,12 @@
         var unit_data = {
           'length':1,
           'data-0-experiments_pk[]': exp_pk,
-          'data-0-parent_pk[]': $form.find('select[name="parent"]').val(),
           'data-0-description': $form.find('textarea[name="description"]').val(),
           'data-0-sample': $form.find('textarea[name="sample"]').val(),
           'data-0-tags': $form.find('textarea[name="tags"]').val(),
+        }
+        if ($form.find('select[name="parent"]').val()) {
+          unit_data['data-0-parent_pk[]'] = $form.find('select[name="parent"]').val()
         }
 
         $.post($form.attr('action'), unit_data)
