--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -276,6 +276,7 @@
   <link rel="stylesheet" media="screen" href="{% static 'jquery-handsontable/jquery.handsontable.full.css' %}">
   <link rel="stylesheet" media="screen" href="{% static 'jquery-handsontable/jquery.handsontable.bootstrap.css' %}">
   <link rel="stylesheet" media="screen" href="{% static 'jstree/themes/default/style.min.css' %}">
+  <link rel="stylesheet" media="screen" href="{% static 'lightbox/css/lightbox.css' %}">
   <style>
     svg {
       background-color: #FFF;
@@ -351,6 +352,7 @@
   <script src="{% static 'jstree/jstree.js' %}"></script>
   <script src="{% static 'js/tree.js' %}"></script>
   <script src="{% static 'js/plot.js' %}"></script>
+  <script src="{% static 'lightbox/js/lightbox.min.js' %}"></script>
 
   <script type="text/javascript" src="https://www.dropbox.com/static/api/2/dropins.js" id="dropboxjs" data-app-key="mw4uj2q482bd8w0"></script>
 
