--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -422,10 +422,11 @@
           return parents
         }
 
+        var unit_json = JSON.parse(data.unit_data)
         window.unit_data = {
           'data-0-pk': data.pk,
           'data-0-sample': data.sample,
-          'data-0-description': data.description,
+          'data-0-description': unit_json.description,
           'data-0-parent_pk[]': get_parents(data.unit_data),
           'data-0-experiments_pk[]': exp_pk,
           'length':1
@@ -439,9 +440,6 @@
 
         // description
         $('.desc-area').html(data.description)
-
-        //files
-        $('.desc-area').append(data.files)
         update_uploaders()
         var button = Dropbox.createChooseButton(options);
         document.getElementById("dropbox").appendChild(button);
@@ -550,6 +548,52 @@
                $form.parents('.description-editor').hide().parents('#description').find('.description-text').html(desc_value);
 
             });
+    });
+
+  $('body').on('submit','.links-unit-form', function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+        var $form = $(e.target);
+        var link = $form.find('input[name="link"]').val();
+
+        $.post($form.attr('action'), $form.serialize())
+            .fail(function (xhr) {
+                var data = xhr.responseJSON;
+                $form.find('.has-error').removeClass('has-error').removeAttr('title');
+                for (var name in data) {
+                    if (data.hasOwnProperty(name)) {
+                        var icon = $('<i>', {'class': 'fa fa-warning'}),
+                            error_message = $('span', {
+                                'class': 'text-red error-msg',
+                                'id': 'error_' + $form.find('[name="' + name + '"]').id
+                            }).text(data[name].join(', ')).append(icon);
+
+                        $form.find('[name="' + name + '"]')
+                            .after(error_message);
+                        $form.find('[name="' + name + '"]')
+                            .parents('.form-group')
+                            .addClass('has-error')
+                            .attr('title', data[name].join(', '));
+                    }
+                }
+            }).done(function (response) {
+                var delete_link = '<button data-delete-url="'+ response.delete_link + '" class="close link-delete" type="button">x</button>';
+                $('.link-list').append('<li><a href="' + link + '">'+ link + '</a>'+ delete_link + '</li>');
+            });
+    });
+
+    $('body').on('click','.link-delete', function (e) {
+        e.preventDefault();
+        e.stopPropagation();
+
+        if(confirm('Delete this link?')) {
+          var delete_url = $(this).data("delete-url");
+          var parent_li = $(this).closest('li')
+          $.post(delete_url, {}, function (response) {
+            parent_li.remove();
+          });
+        }
+        return false
     });
 
     $('body').on('submit','.add-unit-form', function (e) {
