--- a/templates/base.html
+++ b/templates/base.html
@@ -31,7 +31,7 @@
   <script src="{% static 'js/jquery-2.1.4.min.js' %}"></script>
   {% block top_scripts %}{% endblock %}
 </head>
-<body class="sidebar-mini {% block body_classes %}skin-black {% endblock %}">
+<body class="sidebar-mini {% block body_classes %}skin-black {% endblock %}{% if SIDEBAR_COLLAPSED %}sidebar-collapse{% endif %}">
 {% block body %}
 <div class="wrapper">
   {% block menu %}
@@ -139,9 +139,11 @@
   <!-- jQuery UI 1.10.3 -->
   <script src="{% static 'adminLTE/plugins/jQueryUI/jquery-ui.min.js' %}" type="text/javascript"></script>
   <script src="{% static 'adminLTE/plugins/slimScroll/jquery.slimscroll.min.js' %}" type="text/javascript"></script>
+  <script src="{% static 'js/js.cookie.js' %}" type="text/javascript"></script>
   <script src="{% static 'select2/select2.min.js' %}"></script>
   <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
   <script src="{% static 'adminLTE/js/app.js' %}" type="text/javascript"></script>
+  <script src="{% static 'js/app.js' %}" type="text/javascript"></script>
   <script src="{% static 'js/forms.js' %}"></script>
   <script type="text/javascript" src="{% url 'django.views.i18n.javascript_catalog' %}"></script>
   <script type="text/javascript">
