--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -197,7 +197,7 @@
 
                   <div class="tab-pane"  id="unit-measurements">
                     <div class="btn-group">
-                      <button style="display:none" id="save" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Saves' %}</button>
+                      <button style="display:none" id="save" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Save' %}</button>
                     </div>
                     <div class="btn-group">
                       <button  style="display:none" class="addcolumn btn bg-olive"><i class="fa fa-plus"></i> {% trans 'Add Column' %}</button>
@@ -253,7 +253,7 @@
 
                   <div class="tab-pane" id="unit-tags">
                     <div id="tag-tree" data-content='{{ tags }}'></div>
-                    <button style="display:none" id="tag-save" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Saves' %}</button>
+                    <button style="display:none" id="tag-save" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Save' %}</button>
                   </div>
 
                   <div class="tab-pane" id="unit-comments">
