--- a/templates/handsontable_measurment.html
+++ b/templates/handsontable_measurment.html
@@ -37,7 +37,7 @@
 {% block manage_buttons %}
   {% if is_member %}
     <div class="btn-group">
-      <button id="save" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Saves' %}</button>
+      <button id="save" class="btn bg-olive"><i class="fa fa-save"></i> {% trans 'Save' %}</button>
     </div>
   {% endif %}
     <div class="btn-group">
