--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -578,7 +578,9 @@
                 }
             }).done(function (response) {
                 var delete_link = '<button data-delete-url="'+ response.delete_link + '" class="close link-delete" type="button">x</button>';
-                $('.link-list').append('<li><a href="' + link + '">'+ link + '</a>'+ delete_link + '</li>');
+                var date = '<br><span class="">' + response.date + '</span>'
+                $('.link-list').append('<li><a href="' + link + '">'+ link + '</a>'+ delete_link  + date + '</li>');
+                $form.find('input[name="link"]').val('');
             });
     });
 
