Add file upload from server folder.

--- a/templates/experiments/experiment_detail.html
+++ b/templates/experiments/experiment_detail.html
@@ -265,6 +265,7 @@
         </div>
     </div>
   </div>
+  {% include 'filemanager/modal.html' %}
 </div>
 
 {% include 'alert.html' with obj=object.title %}
@@ -640,6 +641,26 @@
 
             });
       });
+
+    $('body').on('click', '#preview', function(e){
+      var file_url = window.location.origin + $(this).find('h1').attr('title')
+      var file_name = $(this).find('h1').text();
+      //trim 'edit file'
+      file_name = file_name.substring(0, file_name.length - $(this).find('h1').find('a').text().length);
+      var url = '/{{ object.lab.pk }}/units/'+ window.unit_data['data-0-pk'] +'/local-upload/'
+      var need_upload = $('.upload-file').is(":checked")
+      var file = {
+        name:file_name,
+        link:file_url,
+      }
+      $.post(url,{'files[]': JSON.stringify([file,]), 'need_upload': need_upload}, function(data){
+        $('.blueimp-uploader').fileupload('destroy');
+        $('.blueimp-uploader').find('.file_table').html("");
+        update_uploaders()
+      })
+      $('#fm').modal('hide')
+    })
+
 
     $(function() {
       render_graph(JSON.parse( '{{ units_graph_json}}'), '.graph-area', update_unit_info)
