--- a/templates/uploader/uploader.html
+++ b/templates/uploader/uploader.html
@@ -43,6 +43,7 @@
                                                 <input type="file" name="expirience_files" multiple>
                                             {% endif %}
                                         </span>
+                                          <span type="button" class="btn btn-info bg-olive btn-flat" data-toggle="modal" data-target="#fm">from server</span>
                                         <span id="dropbox"></span><div class="checkbox">
                                       <label style="padding-left: 110px"><input type="checkbox" name="upload-file" checked class="upload-file" value="value">{% trans "Upload file to the server" %}</label>
                                         <!-- The global file processing state -->
